# mlp

./: .gitignore  100-epoch.txt  10kepochs.txt  1k-epoch.txt  4jc_setup.sh  7mar-hc1.txt  CMakeLists.txt  Makefile  Makefile-old  address.txt  all-epochs.txt  apr9.txt  april16.txt  april8.txt  archive.zip:Zone.Identifier  blk2-dim4.txt  blk3-dim6.txt  blk4-dim16.txt  blk4-dim6.txt  blk4-dim8.txt  comp.txt  deep.s  dim1-blk2  dim1_blk1.txt  dim2_blk1.txt  dim2_blk2.txt  dim4.txt  emb mar4.txt  embedding table.txt  eq.txt  h200.txt  jc-setup.sh  jc_setup.sh  mar2.txt  mar27.txt  mar29.txt  mar3-improved_emb.txt  mar3-no-emb-grad.txt  mar30.txt  mar3a.txt  (+27 more)
debug/: deep
headers/: custard_flow.h  mlp_types.h  ts.csv
old/: old-mlp.c
src/: custard_flow.c  custard_flow.h  custardy.c  deep.c  mlp.c  old-mlp.c
training/: names.txt
